added and tested video utils

--- a/training/football_training_yolo_v5.ipynb
+++ b/training/football_training_yolo_v5.ipynb
@@ -2267,7 +2267,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Trained in Google Colab: https://colab.research.google.com/drive/1siqCdRM45cmZIxo-1lh8Ep9c1lcj1Aum#scrollTo=8ruBwA_uiFAn"
+   ]
   }
  ],
  "metadata": {
